# mcp-experto-filesystem

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.mcp-experto/index/: index.db
docs/: 404.html  README.md  _navbar.md  _sidebar.md  architecture.md  changelog.md  code-review.md  development-standards.md  index.html  installation.md  local-telemetry-operations.md  markdown-standards.md  mcp-design-guidelines.md  usage.md
docs/_media/: custom.css  theme-toggle.js
install/: dist-mcp.sh  install-mcp-experto-filesystem.sh  mcp-experto-filesystem-install.sh
local-telemetry/: .env.example  docker-compose.yml
local-telemetry/grafana/: grafana.ini
local-telemetry/grafana/dashboards/: all-spans-overview.json  claude-cli-overview.json  cli-workbench-overview.json  codex-cli-overview.json  copilot-cli-overview.json  gemini-cli-overview.json  operational-overview.json
local-telemetry/grafana/provisioning/dashboards/: dashboards.yaml
local-telemetry/grafana/provisioning/datasources/: datasources.yaml
local-telemetry/loki/: loki.yaml
local-telemetry/otel-collector/: config.yaml
local-telemetry/prometheus/: prometheus.yaml
local-telemetry/tempo/: tempo.yaml
references/: README.md  architecture.md  docsify-enhancements.md  docsify-standards.md  local-telemetry-operations.md  markdown-standards.md
src/server/: __init__.py  __main__.py  config.py  exceptions.py  main.py  registry.py
src/server/application/services/: executor.py  workspace_index.py
src/server/docs/: find_similar_content.md  get_help.md  index_errors.md  index_status.md  index_workspace.md  project_overview.md  read_document_excerpt.md  read_file_excerpt.md  search_files.md  server_instructions.md
src/server/infrastructure/filesystem/: sqlite_index.py  workspace.py
src/server/infrastructure/vector/: providers.py
src/server/share/: responses.py
src/server/templates/: tool_help_template.md
src/server/tools/: filesystem.py  help.py
tests/unit/: test_executor.py  test_filesystem.py  test_help.py  test_main.py
